# LogPolarFFTTemplateMatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  fftm.cpp  fftm.cpp~RF2a02f39.TMP  fftm.hpp  main.cpp  test.cpp
docs/: LogPolarFFTTemplateMatching.rst
vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LogPolarFFTTemplateMatching.sln  LogPolarFFTTemplateMatching.vcxproj  LogPolarFFTTemplateMatching.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
vs2015/LogPolarFFTTemplateMatching.dir/Debug/LogPolar.47D73A09.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs2015/LogPolarFFTTemplateMatching.dir/Release/LogPolar.47D73A09.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs2015/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
vs2015/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
vs2015/x64/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
vs2015/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog
